Updating the swag docs and nested READMEs
